--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "first demo for api",
   "main": "app.js",
   "scripts": {
-    "​start​"​: ​"​node server.js​"​
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "debug": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "hello",
